--- a/Admin/QuestionBankView/src/app/create-question-dialog.css
+++ b/Admin/QuestionBankView/src/app/create-question-dialog.css
@@ -1,12 +1,14 @@
 #dialog {
   width: 600px;
-  height: 400px;
+  height: 200px;
 }
 
+#close-button {
+  float: right;
+}
 #form {
   width: 25%;
-  height: 20%;
-  margin: auto;
+  margin: 0 auto;
 }
 #select {
   margin: auto;
@@ -20,3 +22,27 @@
   width: 100%;
 }
 
+.fileDropTarget {
+  width: 100%;
+  height: 100%;
+  border: solid thin #1a1a1a;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.fileDropTargetfile:before {
+  content: "Drop files here or";
+  display: block;
+  text-align: center;
+  position: absolute;
+  left: 0;
+  top: 44.5%;
+  width: 100%;
+}
+
+#CreateQuestion{
+  float: right;
+  margin-top: 10px;
+}
