--- a/Admin/QuestionBankView/src/app/questionview/questionview.component.html
+++ b/Admin/QuestionBankView/src/app/questionview/questionview.component.html
@@ -1,18 +1,61 @@
-<mat-form-field>
-  List length:
-  <input matInput [(ngModel)]="length">
-</mat-form-field>
-<mat-form-field>
-  Page size:
-  <input matInput [(ngModel)]="pageSize">
-</mat-form-field>
+<section>
+    <!--for demo wrap-->
+    <h1>Question Bank</h1>
+    <div class="mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource">
 
-<mat-grid-list cols="6" rowHeight="2:1">
-  <mat-grid-tile>Question Text</mat-grid-tile>
-  <mat-grid-tile>Options</mat-grid-tile>
-  <mat-grid-tile>Correct Answer</mat-grid-tile>
-  <mat-grid-tile>Difficulty Level</mat-grid-tile>
-  <mat-grid-tile>Domain</mat-grid-tile>
-  <mat-grid-tile>Concept Tags</mat-grid-tile>
-</mat-grid-list>
+          <!-- Position Column -->
+          <ng-container matColumnDef="position">
+            <th mat-header-cell *matHeaderCellDef> Question </th>
+            <td mat-cell *matCellDef="let element"> {{element.questionText}} </td>
+          </ng-container>
+
+          <!-- Name Column -->
+          <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef> Difficulty Level </th>
+            <td mat-cell *matCellDef="let element"> {{element.difficultyLevel}} </td>
+          </ng-container>
+
+          <!-- Weight Column -->
+          <ng-container matColumnDef="weight">
+            <th mat-header-cell *matHeaderCellDef> Domain </th>
+            <td mat-cell *matCellDef="let element"> {{element.domain}} </td>
+          </ng-container>
+
+          <!-- Symbol Column -->
+          <ng-container matColumnDef="symbol">
+            <th mat-header-cell *matHeaderCellDef> Concepts </th>
+            <td mat-cell *matCellDef="let element"> {{element.conceptTags}} </td>
+          </ng-container>
+
+          <!-- Symbol Column -->
+          <ng-container matColumnDef="blah">
+            <th mat-header-cell *matHeaderCellDef> Options </th>
+              <td mat-cell *matCellDef="let element"> {{element.optionList}} </td>
+            </ng-container>
+
+          <ng-container matColumnDef="actions">
+            <th mat-header-cell *matHeaderCellDef>
+              <button mat-icon-button color="primary" (click)="addNew()">
+                 <mat-icon aria-label="Example icon-button with a heart icon">add</mat-icon>
+              </button>
+            </th>
+
+            <td mat-cell *matCellDef="let row; let i=index;">
+              <button mat-icon-button color="accent" (click)="startEdit(i, row.id, row.title, row.state, row.url, row.created_at, row.updated_at)">
+                <mat-icon aria-label="Edit">edit</mat-icon>
+              </button>
+
+              <button mat-icon-button color="accent" (click)="deleteItem(i, row.id, row.title, row.state, row.url)">
+                <mat-icon aria-label="Delete">delete</mat-icon>
+              </button>
+            </td>
+          </ng-container>
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+
+        <mat-paginator [pageSizeOptions]="[5, 10, 20]"  showFirstLastButtons></mat-paginator>
+      </div>
+  </section>
 
