--- a/Admin/QuestionBankView/src/app/questionview/questionview.component.html
+++ b/Admin/QuestionBankView/src/app/questionview/questionview.component.html
@@ -46,13 +46,13 @@
                 <mat-icon aria-label="Edit">edit</mat-icon>
               </button>
 
-              <button mat-icon-button color="accent" (click)="deleteItem(i, row.id, row.title, row.state, row.url)">
+              <button mat-icon-button color="accent" (click)="deleteItem(i, row)">
                 <mat-icon aria-label="Delete">delete</mat-icon>
               </button>
             </td>
           </ng-container>
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selectRow(row)"></tr>
         </table>
 
         <mat-paginator [pageSizeOptions]="[5, 10, 20]"  showFirstLastButtons></mat-paginator>
