--- a/Admin/QuestionBankView/src/app/dialogs/delete/delete.dialog.html
+++ b/Admin/QuestionBankView/src/app/dialogs/delete/delete.dialog.html
@@ -1,14 +1,7 @@
 <div class="container">
   <h3 mat-dialog-title>Are you sure?</h3>
   <div mat-dialog-content>
-    Id: {{data.id}}
-    <p></p>
-    Title: {{data.title}}
-    <p></p>
-    State: {{data.state}}
-    <p></p>
-    Url: {{data.url}}
-    <p></p>
+    Do you want to permanently delete this Question ?
   </div>
 
   <div mat-dialog-actions>
