--- a/Admin/QuestionBankView/src/app/questionview/questionview.component.html
+++ b/Admin/QuestionBankView/src/app/questionview/questionview.component.html
@@ -45,8 +45,7 @@
               <button mat-icon-button color="accent" (click)="startEdit(i, row.id, row.title, row.state, row.url, row.created_at, row.updated_at)">
                 <mat-icon aria-label="Edit">edit</mat-icon>
               </button>
-
-              <button mat-icon-button color="accent" (click)="deleteItem(i, row)">
+              <button mat-icon-button color="accent" (click)="deleteItem(row);$event.stopPropagation()">
                 <mat-icon aria-label="Delete">delete</mat-icon>
               </button>
             </td>
