--- a/Admin/QuestionBankView/src/app/questionview/questionview.component.html
+++ b/Admin/QuestionBankView/src/app/questionview/questionview.component.html
@@ -28,12 +28,6 @@
             <td mat-cell *matCellDef="let element"> {{element.conceptTags}} </td>
           </ng-container>
 
-          <!-- Symbol Column -->
-          <ng-container matColumnDef="blah">
-            <th mat-header-cell *matHeaderCellDef> Options </th>
-              <td mat-cell *matCellDef="let element"> {{element.optionList}} </td>
-            </ng-container>
-
           <ng-container matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef>
               <button mat-icon-button color="primary" (click)="addNew()">
@@ -42,10 +36,10 @@
             </th>
 
             <td mat-cell *matCellDef="let row; let i=index;">
-              <button mat-icon-button color="accent" (click)="startEdit(i, row.id, row.title, row.state, row.url, row.created_at, row.updated_at)">
+              <button mat-icon-button (click)="startEdit(row);$event.stopPropagation()">
                 <mat-icon aria-label="Edit">edit</mat-icon>
               </button>
-              <button mat-icon-button color="accent" (click)="deleteItem(row);$event.stopPropagation()">
+              <button mat-icon-button (click)="deleteItem(row);$event.stopPropagation()">
                 <mat-icon aria-label="Delete">delete</mat-icon>
               </button>
             </td>
