--- a/Admin/QuestionBankView/src/app/dialogs/detail/detail.dialog.html
+++ b/Admin/QuestionBankView/src/app/dialogs/detail/detail.dialog.html
@@ -1,6 +1,6 @@
 <div class="container">
   <h3 mat-dialog-title>Detail Question View</h3>
-  <form class="mat-dialog-content" (ngSubmit)="submit" #formControl="ngForm">
+  <form class="mat-dialog-content" #formControl="ngForm">
     <div class="form">
       <mat-form-field>
         <input [disabled] = "data.isDiabled" matInput #input class="form-control" placeholder="Domain" [(ngModel)]="data.row.domain" value= "data.row.domain" name="domain" required >
@@ -25,18 +25,41 @@
       </mat-form-field>
     </div>
 
-    <div class="form">
+    <div class ="form">
       <mat-form-field>
-        <input [disabled] = "data.isDiabled" matInput #input class="form-control" placeholder="Concept Tags" [(ngModel)]="data.row.conceptTags" value= "data.row.conceptTags" name="Concept Tags" required>
+        <input placeholder="Concept Tags" matInput
+        [matChipInputFor]="chipList"
+        [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+        [matChipInputAddOnBlur]="addOnBlur"
+        (matChipInputTokenEnd)="addConcept($event)"
+        [disabled] ="data.isDiabled"/>
+        <mat-chip-list #chipList>
+          <mat-chip *ngFor="let fruit of data.row.conceptTags" [selectable]="selectable"
+                   [removable]="removable" (removed)="removeConcept(fruit)">
+            {{fruit}}
+            <mat-icon matChipRemove *ngIf="removable && !data.isDiabled">cancel</mat-icon>
+          </mat-chip>
+        </mat-chip-list>
       </mat-form-field>
     </div>
 
-    <div class="form">
+    <div class ="form">
       <mat-form-field>
-        <input [disabled] = "data.isDiabled" matInput #input class="form-control" placeholder="Options" [(ngModel)]="data.row.optionList[0].option" value= "data.row.optionList[0].option" name="Options" required>
+        <input placeholder="Options" matInput
+        [matChipInputFor]="chipList"
+        [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+        [matChipInputAddOnBlur]="addOnBlur"
+        (matChipInputTokenEnd)="addOption($event)"
+        [disabled] ="data.isDiabled"/>
+        <mat-chip-list #chipList>
+          <mat-chip *ngFor="let fruit of data.row.optionList" [selectable]="selectable"
+            [removable]="removable" (removed)="removeOptions(fruit)">
+            {{fruit.option}}
+            <mat-icon matChipRemove *ngIf="removable && !data.isDiabled">cancel</mat-icon>
+          </mat-chip>
+        </mat-chip-list>
       </mat-form-field>
-    </div>
-
+      </div>
     <button mat-stroked-button color="primary" (click)="SaveData(data.row)"  *ngIf="!data.isDiabled">
       Save
     </button>
