--- a/Admin/QuestionBankView/src/styles.css
+++ b/Admin/QuestionBankView/src/styles.css
@@ -1,6 +1,7 @@
 @import "../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css";
 
 body {
+  margin:0px;
   background: -webkit-linear-gradient(left, #25c481, #25b7c4);
   background: linear-gradient(to right, #25c481, #25b7c4);
 }
