--- a/Admin/QuestionBankView/src/app/questionview/questionview.component.html
+++ b/Admin/QuestionBankView/src/app/questionview/questionview.component.html
@@ -6,7 +6,7 @@
 
           <!-- Position Column -->
           <ng-container matColumnDef="position">
-            <th mat-header-cell *matHeaderCellDef> Question </th>
+            <th mat-header-cell *matHeaderCellDef > Question </th>
             <td mat-cell *matCellDef="let element"> {{element.questionText}} </td>
           </ng-container>
 
@@ -25,7 +25,11 @@
           <!-- Symbol Column -->
           <ng-container matColumnDef="symbol">
             <th mat-header-cell *matHeaderCellDef> Concepts </th>
-            <td mat-cell *matCellDef="let element"> {{element.conceptTags}} </td>
+            <td mat-cell *matCellDef="let element">
+              <mat-chip-list>
+                <mat-chip *ngFor="let record of element.conceptTags">{{record}}</mat-chip>
+              </mat-chip-list>
+            </td>
           </ng-container>
 
           <ng-container matColumnDef="actions">
