--- a/Admin/QuestionBankView/src/app/dialogs/detail/detail.dialog.html
+++ b/Admin/QuestionBankView/src/app/dialogs/detail/detail.dialog.html
@@ -25,6 +25,12 @@
       </mat-form-field>
     </div>
 
+    <div class="form">
+      <mat-form-field>
+        <input [disabled] = "data.isDiabled" matInput #input class="form-control" placeholder="Taxonomy" [(ngModel)]="data.row.taxonomy" value= "data.row.taxonomy" name="taxonomy" required >
+      </mat-form-field>
+    </div>
+
     <div class ="form">
       <mat-form-field>
         <input placeholder="Concept Tags" matInput
