--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
 <mat-toolbar color="primary">
   Question Bank
 </mat-toolbar>
-<div class="button-row" >
+<router-outlet></router-outlet>
+<!-- <div class="button-row" >
   <button id="CreateQuestion" mat-raised-button color="accent" (click)="openDialog()">
     Create Question
   </button>
 </div>
-<app-questionview></app-questionview>
+<app-questionview></app-questionview> -->
