--- a/src/app/import-questionbank/import-questionbank.component.css
+++ b/src/app/import-questionbank/import-questionbank.component.css
@@ -1,4 +1,4 @@
-/* #CreateQuestion {
+#CreateQuestion {
   margin-top: 10px;
   width: 10%;
   margin-left: auto;
@@ -7,4 +7,4 @@
 
 .button-row {
   text-align: center;
-} */
+}
